trunk/NewArchive/147c4ed134753b1faa233ab98f124d27-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In lambda function:
main.cpp:6:14: error: label ‘someLabel’ used but not defined
         goto someLabel;
              ^
main.cpp: In function ‘int main()’:
main.cpp:4:1: warning: label ‘someLabel’ defined but not used [-Wunused-label]
 someLabel:
 ^
